    *** link:https://tackler.e257.fi/docs/price/historic-market-value/[Historic Market Value]
    *** link:https://tackler.e257.fi/docs/price/variable-market-value/[Variable Market Value]

Changed functionality:

* Better and more informative error messages of invalid transaction data ("parse errors")


==== Fixes

Fixes in this release:

 * Enforce blank line between transactions (Tackler-mk1 / ANTLR)
 * Print error message if repository contains links (Tackler-mk1)
 * Print error message if transaction set is empty (Tackler-mk1)
 * Don't accept invalid cli input arg combinations
 * Check equity account name when strict mode is on (Tackler-Mk1)

==== Contributions

* Thanks to link:https://github.com/RagibHasin[@RagibHasin] for contributing
and helping with Commodity Price Support feature
(link:https://github.com/tackler-ng/tackler/blob/main/docs/tep/tep-1015.adoc[TEP-1015])

==== Development

Updated dependencies (major or minor version):

* itertools: 0.14
* jiff: v0.2
* rust_decimal: 1.37
* uuid: v1.16
* winnow: 0.7

===== Rust toolchain

Rust Edition:: 2024
MSRV:: 1.85.0

==== Release Artifacts

[cols="1,2",width=50%]
|===
|Component    | Version

|Tackler CLI  | TODO: XX.YY.Z
|tackler-core | TODO: No changes
|tackler-api  | TODO: No changes
|tackler-rs   | TODO: No changes
|===


'''


=== Tackler release 25.01.1

==== New features and changes

New features:

* New tackler commands `new` and `init`
  ** Command `new <name>` will create a new bookkeeping setup `name` with default files
  ** Command `init` will initialize a new bookkeeping setup at current location

Changed functionality:

* Replaced ANTLR based Txn parser with winnow parser combinator
  ** This is affecting how invalid journal syntax is reported
  ** This has NO changes to journal syntax
* Replaced time and time-tz with jiff
  ** This have some user visible changes, e.g. 'Z' is replaced with '+00:00'
  ** Txn Filters, Txn Timestamp: Begin and End are displayed with report timezone

==== Fixes
