@@ -26,10 +26,11 @@ Changed functionality:
 
 Fixes in this release:
 
+ * Don't accept invalid cli input arg combinations
+ * Warn if exports are used without cli output arguments
  * Enforce blank line between transactions (Tackler-mk1 / ANTLR)
  * Print error message if repository contains links (Tackler-mk1)
  * Print error message if transaction set is empty (Tackler-mk1)
- * Don't accept invalid cli input arg combinations
  * Check equity account name when strict mode is on (Tackler-Mk1)
 
 ==== Contributions
